force-app/main/default/objects/ssot__FulfillmentOrderProductPriceAdj__dlm/fields/ssot__FulfOrderProdItemAdjTypeID__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfOrderProdItemAdjTypeID__c</fullName>
    <label>Fulfillment Order Product Price Adj Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfOrderProdItemAdjTypeID</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>