force-app/main/default/objects/ssot__FulfillmentOrderProductPriceAdj__dlm/fields/ssot__rel_1697761214116_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761214116_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FulfillmentOrderProductPriceAdj_Prom_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>FulfillmentOrderProductPriceAdj_Prom_rel</relationshipLabel>
    <relationshipName>rel_1697761214116_end</relationshipName>
    <type>Lookup</type>
</CustomField>