force-app/main/default/objects/ssot__FulfillmentOrderProductPriceAdj__dlm/fields/ssot__TotalAdjustmentTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalAdjustmentTaxAmount__c</fullName>
    <label>Total Adjustment Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalAdjustmentTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>